Minor fix for logo positioning error on smaller screens

--- a/css/media.css
+++ b/css/media.css
@@ -177,7 +177,6 @@
     border-bottom: 2px var(--main-blue) solid;
   }
   #main{
-    margin-top: 67px;
     padding-top: 20px;
     }
   #logo{
